Core: Convert ttf font files to woff2 and woff for reduced file size

--- a/index.css
+++ b/index.css
@@ -11,8 +11,9 @@
 /* SVN Poppins - Vietnamese */
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/SVN-Poppins-Light.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/SVN-Poppins-Light.woff2") format("woff2"),
+    url("./fonts/woff/SVN-Poppins-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
@@ -22,8 +23,9 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/SVN-Poppins-Regular.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/SVN-Poppins-Regular.woff2") format("woff2"),
+    url("./fonts/woff/SVN-Poppins-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -33,8 +35,9 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/SVN-Poppins-Medium.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/SVN-Poppins-Medium.woff2") format("woff2"),
+    url("./fonts/woff/SVN-Poppins-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -44,8 +47,9 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/SVN-Poppins-SemiBold.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/SVN-Poppins-SemiBold.woff2") format("woff2"),
+    url("./fonts/woff/SVN-Poppins-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -55,8 +59,9 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/SVN-Poppins-Bold.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/SVN-Poppins-Bold.woff2") format("woff2"),
+    url("./fonts/woff/SVN-Poppins-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -66,8 +71,9 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/SVN-Poppins-Black.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/SVN-Poppins-Black.woff2") format("woff2"),
+    url("./fonts/woff/SVN-Poppins-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
@@ -82,8 +88,9 @@ so that the browser can fallback on it by default.
 This is preferable since it has a smaller file size. */
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/Poppins-Light.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/Poppins-Light.woff2") format("woff2"),
+    url("./fonts/woff/Poppins-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
@@ -92,8 +99,9 @@ This is preferable since it has a smaller file size. */
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/Poppins-Regular.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/Poppins-Regular.woff2") format("woff2"),
+    url("./fonts/woff/Poppins-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -102,8 +110,9 @@ This is preferable since it has a smaller file size. */
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/Poppins-Medium.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/Poppins-Medium.woff2") format("woff2"),
+    url("./fonts/woff/Poppins-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -112,8 +121,9 @@ This is preferable since it has a smaller file size. */
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/Poppins-SemiBold.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/Poppins-SemiBold.woff2") format("woff2"),
+    url("./fonts/woff/Poppins-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -122,8 +132,9 @@ This is preferable since it has a smaller file size. */
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/Poppins-Bold.ttf');
+  font-family: "Poppins";
+  src: url("./fonts/woff2/Poppins-Bold.woff2") format("woff2"),
+    url("./fonts/woff/Poppins-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -132,8 +143,9 @@ This is preferable since it has a smaller file size. */
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('./fonts/Poppins-Black.ttf');
+  font-family: "Poppins";
+  src: url("/fonts/woff2/Poppins-Black.woff2") format("woff2"),
+    url("/fonts/woff/Poppins-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
