--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
   unicode-range: var(--vn-unicode-range);
@@ -29,6 +30,7 @@
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
   unicode-range: var(--vn-unicode-range);
@@ -41,6 +43,7 @@
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
   unicode-range: var(--vn-unicode-range);
@@ -53,6 +56,7 @@
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
   unicode-range: var(--vn-unicode-range);
@@ -65,6 +69,7 @@
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
   unicode-range: var(--vn-unicode-range);
@@ -77,6 +82,7 @@
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
   unicode-range: var(--vn-unicode-range);
@@ -94,6 +100,7 @@ This is preferable since it has a smaller file size. */
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
 }
@@ -105,6 +112,7 @@ This is preferable since it has a smaller file size. */
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
 }
@@ -116,6 +124,7 @@ This is preferable since it has a smaller file size. */
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
 }
@@ -127,6 +136,7 @@ This is preferable since it has a smaller file size. */
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
 }
@@ -138,6 +148,7 @@ This is preferable since it has a smaller file size. */
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
 }
@@ -149,6 +160,7 @@ This is preferable since it has a smaller file size. */
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
   line-height: normal;
   letter-spacing: normal;
 }
